syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message ReadMailNotify {
  repeated uint32 mail_id_list = 1;
}
